@@ -28,10 +28,10 @@
   (& (| (dump-pass? pass x)
         (dump-pass? end x))
      (? (equal x (last-pass-result))
-        (format t "; Pass ~A outputs no difference to previous dump.~%" pass)
-        {(format t "~%; **** Dump of pass ~A:~%" pass)
+        (format t ";      …no difference to previous dump.~%" pass)
+        {(format t "; >>>> Dump of pass ~A:~%" (symbol-name pass))
          (print x)
-         (format t "~%; **** End of ~A.~%" pass)}))
+         (format t "~L; <<<< End of pass ~A.~%" (symbol-name pass))}))
   x)
 
 (fn transpiler-pass (p list-of-exprs)
@@ -41,20 +41,20 @@
   (| (enabled-end? name)
      (return list-of-exprs))
   (& (dump-pass? name list-of-exprs)
-     (format t "~%~L; #### Compiler end ~A~%~%" name))
+     (format t "~%; ######## Compiler end ~A~%" (symbol-name name)))
   (& list-of-exprs
      (with (outpass  (cdr (assoc name (output-passes)))
             out      nil)
        (@ (p passes (? outpass out list-of-exprs))
          (? (enabled-pass? p.)
             {(& (dump-passes?)
-                (format t "~%~L; #### Running pass ~A in ~A~%" p. name))
+                (format t "; ++++ Running pass ~A in ~A~%" (symbol-name p.) (symbol-name name)))
              (= list-of-exprs (dump-pass name p. (transpiler-pass .p list-of-exprs)))
              (= (last-pass-result) list-of-exprs)
              (& (eq p. outpass)
                 (= out list-of-exprs))}
             (& (dump-passes?)
-               (format t "~%~L; #### Skipping pass ~A in ~A~%" p. name)))))))
+               (format t "; ---- Skipping pass ~A in ~A~%" (symbol-name p.) (symbol-name name))))))))
 
 (defmacro define-transpiler-end (name &rest name-function-pairs)
   (!= (group name-function-pairs 2)
