@@ -1,3 +1,6 @@
+Changes relative to tre-0.17:
+  * Beautified compiler dumps.
+
 Changes of tre-0.17 relative to tre-0.16:
   * COUNT now has :TEST argument.
   * COMPILE lists unused functions.
